--- a/homeStyle.css
+++ b/homeStyle.css
@@ -5,7 +5,7 @@
 
 html {
 	/*This section is template from Css-Tricks.com*/
-	background: url(images/background.jpg) no-repeat center center fixed; 
+	/*background: url(images/background.jpg) no-repeat center center fixed; */
 	background-color: black;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
