--- a/homeStyle.css
+++ b/homeStyle.css
@@ -11,7 +11,7 @@ html {
 	-o-background-size: cover;
 	background-size: cover;
 	/*Section ends*/
-	background-color: black;
+	background-color: white;
 }
 
 .header {
