--- a/homeStyle.css
+++ b/homeStyle.css
@@ -82,15 +82,8 @@ html {
 	margin-top:50%;
 }
 
-.insta {
+.linked {
 	height:50px;
 	float:right;
 	padding:7px;
-}
-
-.face {
-	height:50px;
-	float:right;
-	padding:7px;
-	margin-left:10px;
 }
