--- a/homeStyle.css
+++ b/homeStyle.css
@@ -99,13 +99,8 @@ html {
 }
 
 .linked {
-	/*height:50px;*/
-	/*float:right;*/
-	/*padding:7px;*/
-	/*width:250;*/
-	
-    position:fixed;
-    right:10px;
-    bottom: 10px 
-	padding:10px;
+	height:50px;
+	float:right;
+	padding:7px;
+	width:50;
 }
