--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,5 +1,5 @@
 * {
-	font-family:Courier New;
+	font-family: Helvetica;
 	color:white;
 }
 
@@ -90,7 +90,7 @@ html {
 
 .projectBio {
 	text-align:center;
-	color:white;
+	color:#BF092F;
 }
 
 .media {
